# HE_practice

./: .gitmodules  README.md
01_SEAL_practice/: README.md
01_SEAL_practice/example/: CMakeLists.txt  test.cpp
01_SEAL_practice/mnist/: CMakeLists.txt  data.h  gen_input.py  mnist_bfv.cpp  mnist_ckks.cpp  print_parms.h  train.py
02_Lattigo_practice/: README.md
02_Lattigo_practice/example/: go.mod  main.go
02_Lattigo_practice/mnist/: data.go  main.go
03_Homomorphic_Inference/: README.md  distill.ipynb  main.go  test.cpp
04_Homomorphic_Inference_2/: CMakeLists.txt  README.md  input_data.go  input_data.h  main.cpp  main.go  y_tests.h
